6.6/api/Classes/index_classes.md
---
title: Classes

---

# Classes




* **class [ColorScheme](../Classes/classColorScheme.md)** 
    * **struct [rgb](../Classes/structColorScheme_1_1rgb.md)** 
* **class [ColorSchemes](../Classes/classColorSchemes.md)** 
* **class [CustomSlider](../Classes/classCustomSlider.md)** 
* **class [CustomSurfaceReconstructionFilter](../Classes/classCustomSurfaceReconstructionFilter.md)** 
* **class [FEAreaCoverage](../Classes/classFEAreaCoverage.md)** 
    * **class [Surface](../Classes/classFEAreaCoverage_1_1Surface.md)** 
* **class [FEAutoMesher](../Classes/classFEAutoMesher.md)** 
* **class [FECVDDecimationModifier](../Classes/classFECVDDecimationModifier.md)** 
    * **class [Cluster](../Classes/classFECVDDecimationModifier_1_1Cluster.md)** 
    * **struct [EDGE](../Classes/structFECVDDecimationModifier_1_1EDGE.md)** 
    * **class [NODE](../Classes/classFECVDDecimationModifier_1_1NODE.md)** 
* **class [FECoreMesh](../Classes/classFECoreMesh.md)** 
* **class [FEEdge](../Classes/classFEEdge.md)** 
* **class [FEElement](../Classes/classFEElement.md)** 
* **class [FEElementData](../Classes/classFEElementData.md)** 
* **class [FEElement_](../Classes/classFEElement__.md)** 
* **class [FEFace](../Classes/classFEFace.md)** 
* **class [FEFillHole](../Classes/classFEFillHole.md)** 
    * **class [EdgeRing](../Classes/classFEFillHole_1_1EdgeRing.md)** 
    * **struct [FACE](../Classes/structFEFillHole_1_1FACE.md)** 
* **class [FEFixMesh](../Classes/classFEFixMesh.md)** 
* **class [FEItem](../Classes/classFEItem.md)** 
* **class [FEMesh](../Classes/classFEMesh.md)** 
* **class [FEMeshSmoothingModifier](../Classes/classFEMeshSmoothingModifier.md)** 
* **class [FENode](../Classes/classFENode.md)** 
* **class [FENodeElementList](../Classes/classFENodeElementList.md)** 
* **class [FENodeFaceList](../Classes/classFENodeFaceList.md)** 
* **class [FENodeNodeList](../Classes/classFENodeNodeList.md)** 
* **class [FETri3](../Classes/classFETri3.md)** 
* **class [FEVTKExport](../Classes/classFEVTKExport.md)** 
* **class [FEVTKimport](../Classes/classFEVTKimport.md)** 
* **class [GLCOLOR](../Classes/classGLCOLOR.md)** 
* **struct [Intersection](../Classes/structIntersection.md)** 
* **class [LegacyMeshGenerator](../Classes/classLegacyMeshGenerator.md)** 
* **class [MeshSettings](../Classes/classMeshSettings.md)** <br>Settings for creating a mesh. 
* **class [ObjectReader](../Classes/classObjectReader.md)** 
* **class [ObjectWriter](../Classes/classObjectWriter.md)** 
* **class [ParticleEvent:: Parent](../Classes/classParticleEvent_1_1_01Parent.md)** 
* **class [ParticleGradientDescentPositionOptimizer](../Classes/classParticleGradientDescentPositionOptimizer.md)** 
* **class [ParticleImageDomain](../Classes/classParticleImageDomain.md)** 
* **class [ParticleImageDomainWithCurvature](../Classes/classParticleImageDomainWithCurvature.md)** 
* **class [ParticleImageDomainWithGradN](../Classes/classParticleImageDomainWithGradN.md)** 
* **class [ParticleImageDomainWithGradients](../Classes/classParticleImageDomainWithGradients.md)** 
* **class [ParticleImplicitSurfaceDomain](../Classes/classParticleImplicitSurfaceDomain.md)** 
* **class [ParticleMeanCurvatureAttribute](../Classes/classParticleMeanCurvatureAttribute.md)** 
* **class [ParticleProcrustesRegistration](../Classes/classParticleProcrustesRegistration.md)** 
* **class [ParticleShapeLinearRegressionMatrixAttribute](../Classes/classParticleShapeLinearRegressionMatrixAttribute.md)** 
* **class [ParticleShapeMatrixAttribute](../Classes/classParticleShapeMatrixAttribute.md)** <br>Each column describes a shape. A shape may be composed of m_DomainsPerShape domains (default 1). ALL DOMAINS ARE _NOT_ ASSUMED TO HAVE THE SAME NUMBER OF PARTICLES! 
* **class [ParticleShapeMixedEffectsMatrixAttribute](../Classes/classParticleShapeMixedEffectsMatrixAttribute.md)** 
* **class [Preferences](../Classes/classPreferences.md)** <br>Application preferences. 
* **class [Procrustes3D](../Classes/classProcrustes3D.md)** 
* **struct [Quad](../Classes/structQuad.md)** 
* **struct [Ray](../Classes/structRay.md)** 
* **class [Reconstruction](../Classes/classReconstruction.md)** 
* **struct [SimilarityTransform3D](../Classes/structSimilarityTransform3D.md)** 
* **class [StudioLogger](../Classes/classStudioLogger.md)** <br>Handle logger callbacks via Qt for thread correctness. 
* **class [SurfaceReconstructor](../Classes/classSurfaceReconstructor.md)** 
* **struct [Triangle](../Classes/structTriangle.md)** 
* **namespace [Ui](../Namespaces/namespaceUi.md)** 
* **class [Utils](../Classes/classUtils.md)** 
* **struct [VTKEXPORT](../Classes/structVTKEXPORT.md)** 
* **namespace [fmt](../Namespaces/namespacefmt.md)** 
    * **struct [formatter< QString >](../Classes/structfmt_1_1formatter_3_01QString_01_4.md)** 
* **namespace [itk](../Namespaces/namespaceitk.md)** 
    * **class [AdvancedTransform](../Classes/classitk_1_1AdvancedTransform.md)** <br>Transform maps points, vectors and covariant vectors from an input space to an output space. 
    * **class [BSplineInterpolateImageFunctionWithDoubleCoefficents](../Classes/classitk_1_1BSplineInterpolateImageFunctionWithDoubleCoefficents.md)** 
    * **class [CompactlySupportedRBFSparseKernelTransform](../Classes/classitk_1_1CompactlySupportedRBFSparseKernelTransform.md)** 
    * **namespace [Functor](../Namespaces/namespaceitk_1_1Functor.md)** 
        * **class [MultiplyByConstant](../Classes/classitk_1_1Functor_1_1MultiplyByConstant.md)** 
    * **class [KernelTransform2](../Classes/classitk_1_1KernelTransform2.md)** 
    * **class [MultiplyByConstantImageFilter](../Classes/classitk_1_1MultiplyByConstantImageFilter.md)** <br>Multiply input pixels by a constant. 
    * **class [SparseKernelTransform](../Classes/classitk_1_1SparseKernelTransform.md)** 
    * **class [TPGACLevelSetImageFilter](../Classes/classitk_1_1TPGACLevelSetImageFilter.md)** 
    * **class [ThinPlateSplineKernelTransform2](../Classes/classitk_1_1ThinPlateSplineKernelTransform2.md)** 
* **class [mat3d](../Classes/classmat3d.md)** 
* **class [matrix](../Classes/classmatrix.md)** 
* **class [meshFIM](../Classes/classmeshFIM.md)** 
* **class [object_reader](../Classes/classobject__reader.md)** 
* **class [object_writer](../Classes/classobject__writer.md)** 
* **class [quatd](../Classes/classquatd.md)** 
* **namespace [shapeworks](../Namespaces/namespaceshapeworks.md)** <br>User usage reporting (telemetry) 
    * **class [AnalysisTool](../Classes/classshapeworks_1_1AnalysisTool.md)** 
    * **class [AnalysisUtils](../Classes/classshapeworks_1_1AnalysisUtils.md)** 
    * **class [Analyze](../Classes/classshapeworks_1_1Analyze.md)** <br>High level analyze API. 
    * **class [AnalyzeCommandGroup](../Classes/classshapeworks_1_1AnalyzeCommandGroup.md)** 
    * **class [ColorMap](../Classes/classshapeworks_1_1ColorMap.md)** 
    * **class [ColorMaps](../Classes/classshapeworks_1_1ColorMaps.md)** 
    * **class [Command](../Classes/classshapeworks_1_1Command.md)** 
    * **class [CompareSettings](../Classes/classshapeworks_1_1CompareSettings.md)** 
    * **class [CompareWidget](../Classes/classshapeworks_1_1CompareWidget.md)** 
    * **class [Constraint](../Classes/classshapeworks_1_1Constraint.md)** 
    * **class [Constraints](../Classes/classshapeworks_1_1Constraints.md)** 
    * **class [ContourDomain](../Classes/classshapeworks_1_1ContourDomain.md)** 
    * **class [CorrespondenceFunction](../Classes/classshapeworks_1_1CorrespondenceFunction.md)** <br>Correspondence term. 
    * **class [CurvatureSamplingFunction](../Classes/classshapeworks_1_1CurvatureSamplingFunction.md)** <br>Please note: This is the sampling function currently being used. 
        * **struct [CrossDomainNeighborhood](../Classes/structshapeworks_1_1CurvatureSamplingFunction_1_1CrossDomainNeighborhood.md)** 
    * **class [DataTool](../Classes/classshapeworks_1_1DataTool.md)** 
    * **class [DeepSSMJob](../Classes/classshapeworks_1_1DeepSSMJob.md)** <br>Qt Wrapper for DeepSSM. 
    * **class [DeepSSMParameters](../Classes/classshapeworks_1_1DeepSSMParameters.md)** 
    * **class [DeepSSMTool](../Classes/classshapeworks_1_1DeepSSMTool.md)** 
    * **class [DisentangledCorrespondenceFunction](../Classes/classshapeworks_1_1DisentangledCorrespondenceFunction.md)** 
    * **class [DualVectorFunction](../Classes/classshapeworks_1_1DualVectorFunction.md)** 
    * **class [EigenUtils](../Classes/classshapeworks_1_1EigenUtils.md)** 
    * **class [ExcelProjectReader](../Classes/classshapeworks_1_1ExcelProjectReader.md)** <br>Excel file format reader for [Project](). 
    * **class [ExcelProjectWriter](../Classes/classshapeworks_1_1ExcelProjectWriter.md)** <br>Excel file format writer for [Project](). 
    * **class [Executable](../Classes/classshapeworks_1_1Executable.md)** 
    * **class [ExportImageDialog](../Classes/classshapeworks_1_1ExportImageDialog.md)** 
    * **class [ExportUtils](../Classes/classshapeworks_1_1ExportUtils.md)** <br>Export utilities for Studio. 
    * **class [FreeFormConstraint](../Classes/classshapeworks_1_1FreeFormConstraint.md)** 
    * **class [GenericContainer](../Classes/classshapeworks_1_1GenericContainer.md)** <br>This class seems to be only a wrapper around std::vector implementing ITK DataObject (for smart pointer?) 
    * **class [GenericContainerArray](../Classes/classshapeworks_1_1GenericContainerArray.md)** <br>This class appears to be an array of GenericContainers (e.g. std::vector) that implements the [Observer]() interface. The array size tracks the number of domains in the system. E.g. one per domain. 
    * **class [GradientDescentOptimizer](../Classes/classshapeworks_1_1GradientDescentOptimizer.md)** 
    * **class [Groom](../Classes/classshapeworks_1_1Groom.md)** <br>High level groom API. 
    * **class [GroomCommandGroup](../Classes/classshapeworks_1_1GroomCommandGroup.md)** 
    * **class [GroomParameters](../Classes/classshapeworks_1_1GroomParameters.md)** 
    * **class [GroomTool](../Classes/classshapeworks_1_1GroomTool.md)** 
    * **class [GroupPvalueJob](../Classes/classshapeworks_1_1GroupPvalueJob.md)** 
    * **class [Image](../Classes/classshapeworks_1_1Image.md)** 
    * **class [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md)** 
    * **class [ImageDomain](../Classes/classshapeworks_1_1ImageDomain.md)** 
    * **class [ImageDomainWithCurvature](../Classes/classshapeworks_1_1ImageDomainWithCurvature.md)** 
    * **class [ImageDomainWithGradN](../Classes/classshapeworks_1_1ImageDomainWithGradN.md)** 
    * **class [ImageDomainWithGradients](../Classes/classshapeworks_1_1ImageDomainWithGradients.md)** 
    * **class [ImageLabel](../Classes/classshapeworks_1_1ImageLabel.md)** <br>An extention of QLabel especially for scaled images. 
    * **class [ImageUtils](../Classes/classshapeworks_1_1ImageUtils.md)** <br>Helper functions for image. 
    * **class [ImplicitSurfaceDomain](../Classes/classshapeworks_1_1ImplicitSurfaceDomain.md)** 
    * **class [IndexRegion](../Classes/classshapeworks_1_1IndexRegion.md)** <br>Indices into a 3d region of memory (can be negative, e.g., for the purpose of padding an image) 
    * **class [Job](../Classes/classshapeworks_1_1Job.md)** 
    * **class [JsonProjectReader](../Classes/classshapeworks_1_1JsonProjectReader.md)** <br>JSON file format reader for [Project](). 
    * **class [JsonProjectWriter](../Classes/classshapeworks_1_1JsonProjectWriter.md)** <br>JSON file format writer for [Project](). 
    * **class [KeyboardShortcuts](../Classes/classshapeworks_1_1KeyboardShortcuts.md)** 
    * **class [LandmarkDefinition](../Classes/classshapeworks_1_1LandmarkDefinition.md)** <br>Landmark class containing properties of each landmark. 
    * **class [LandmarkItemDelegate](../Classes/classshapeworks_1_1LandmarkItemDelegate.md)** 
    * **class [LandmarkTableModel](../Classes/classshapeworks_1_1LandmarkTableModel.md)** 
    * **class [LandmarkWidget](../Classes/classshapeworks_1_1LandmarkWidget.md)** <br>[LandmarkWidget](). 
    * **class [LegacyCorrespondenceFunction](../Classes/classshapeworks_1_1LegacyCorrespondenceFunction.md)** 
    * **class [LegacyShapeMatrix](../Classes/classshapeworks_1_1LegacyShapeMatrix.md)** 
    * **class [Lightbox](../Classes/classshapeworks_1_1Lightbox.md)** <br>Display multiple Viewers in a tiled display. 
    * **class [LinearRegressionShapeMatrix](../Classes/classshapeworks_1_1LinearRegressionShapeMatrix.md)** 
    * **class [LogWindow](../Classes/classshapeworks_1_1LogWindow.md)** <br>Log Window. 
    * **class [Logging](../Classes/classshapeworks_1_1Logging.md)** <br>ShapeWorks [Logging]() Library. 
    * **class [MatrixContainer](../Classes/classshapeworks_1_1MatrixContainer.md)** 
    * **class [MeanCurvatureContainer](../Classes/classshapeworks_1_1MeanCurvatureContainer.md)** 
    * **class [Mesh](../Classes/classshapeworks_1_1Mesh.md)** 
    * **class [MeshCache](../Classes/classshapeworks_1_1MeshCache.md)** <br>Thread safe cache for meshes index by shape. 
    * **class [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md)** 
    * **class [MeshDomain](../Classes/classshapeworks_1_1MeshDomain.md)** 
    * **class [MeshGenerator](../Classes/classshapeworks_1_1MeshGenerator.md)** 
    * **struct [MeshGeoEntry](../Classes/structshapeworks_1_1MeshGeoEntry.md)** 
    * **class [MeshGroup](../Classes/classshapeworks_1_1MeshGroup.md)** <br>Representation of a group of meshes. 
    * **class [MeshManager](../Classes/classshapeworks_1_1MeshManager.md)** <br>Class to manage meshes. 
    * **class [MeshReader](../Classes/classshapeworks_1_1MeshReader.md)** <br>reads mesh (used only by one of the [Mesh](../Classes/classshapeworks_1_1Mesh.md) constructors) 
    * **class [MeshReconstructors](../Classes/classshapeworks_1_1MeshReconstructors.md)** 
    * **class [MeshSlice](../Classes/classshapeworks_1_1MeshSlice.md)** <br>[MeshSlice](). 
    * **class [MeshUtils](../Classes/classshapeworks_1_1MeshUtils.md)** 
    * **class [MeshWarper](../Classes/classshapeworks_1_1MeshWarper.md)** 
    * **class [MeshWorkItem](../Classes/classshapeworks_1_1MeshWorkItem.md)** <br>Provides concurrent access to a list of shapes to work needing reconstruction. 
    * **class [MeshWorkQueue](../Classes/classshapeworks_1_1MeshWorkQueue.md)** 
    * **class [MeshWorker](../Classes/classshapeworks_1_1MeshWorker.md)** 
    * **class [MeshWrapper](../Classes/classshapeworks_1_1MeshWrapper.md)** 
    * **class [MixedEffectsShapeMatrix](../Classes/classshapeworks_1_1MixedEffectsShapeMatrix.md)** 
    * **struct [MultiVariateNormalRandom](../Classes/structshapeworks_1_1MultiVariateNormalRandom.md)** 
    * **class [NetworkAnalysisJob](../Classes/classshapeworks_1_1NetworkAnalysisJob.md)** 
    * **class [Observer](../Classes/classshapeworks_1_1Observer.md)** <br>This class is an observer interface for classes to monitor for changes to the optimizer (observer pattern) 
        * **struct [DefinedCallbacksStruct](../Classes/structshapeworks_1_1Observer_1_1DefinedCallbacksStruct.md)** 
    * **class [OptimizationVisualizer](../Classes/classshapeworks_1_1OptimizationVisualizer.md)** 
    * **class [Optimize](../Classes/classshapeworks_1_1Optimize.md)** 
    * **class [OptimizeCommandGroup](../Classes/classshapeworks_1_1OptimizeCommandGroup.md)** 
    * **class [OptimizeParameterFile](../Classes/classshapeworks_1_1OptimizeParameterFile.md)** 
    * **class [OptimizeParameters](../Classes/classshapeworks_1_1OptimizeParameters.md)** 
    * **class [OptimizeTool](../Classes/classshapeworks_1_1OptimizeTool.md)** 
    * **class [PaintWidget](../Classes/classshapeworks_1_1PaintWidget.md)** 
    * **class [Parameters](../Classes/classshapeworks_1_1Parameters.md)** <br>Parameter settings. 
    * **class [ParticleArea](../Classes/classshapeworks_1_1ParticleArea.md)** 
    * **class [ParticleAreaJob](../Classes/classshapeworks_1_1ParticleAreaJob.md)** 
    * **class [ParticleAreaPanel](../Classes/classshapeworks_1_1ParticleAreaPanel.md)** 
    * **class [ParticleColors](../Classes/classshapeworks_1_1ParticleColors.md)** <br>Supplies particle colors. 
    * **class [ParticleDomain](../Classes/classshapeworks_1_1ParticleDomain.md)** 
    * **class [ParticleEvent](../Classes/classshapeworks_1_1ParticleEvent.md)** 
    * **class [ParticleGaussianModeWriter](../Classes/classshapeworks_1_1ParticleGaussianModeWriter.md)** 
    * **class [ParticleGoodBadAssessment](../Classes/classshapeworks_1_1ParticleGoodBadAssessment.md)** <br>Performs good/bad points assessment and reports the bad positions of the particle system. 
    * **class [ParticleNeighborhood](../Classes/classshapeworks_1_1ParticleNeighborhood.md)** 
    * **class [ParticleNormalEvaluation](../Classes/classshapeworks_1_1ParticleNormalEvaluation.md)** 
    * **class [ParticleNormalEvaluationJob](../Classes/classshapeworks_1_1ParticleNormalEvaluationJob.md)** 
    * **struct [ParticlePointIndexPair](../Classes/structshapeworks_1_1ParticlePointIndexPair.md)** 
    * **class [ParticleRegionDomain](../Classes/classshapeworks_1_1ParticleRegionDomain.md)** 
    * **class [ParticleRegionNeighborhood](../Classes/classshapeworks_1_1ParticleRegionNeighborhood.md)** 
        * **struct [IteratorNodePair](../Classes/structshapeworks_1_1ParticleRegionNeighborhood_1_1IteratorNodePair.md)** 
    * **class [ParticleShapeStatistics](../Classes/classshapeworks_1_1ParticleShapeStatistics.md)** 
    * **class [ParticleSurfaceNeighborhood](../Classes/classshapeworks_1_1ParticleSurfaceNeighborhood.md)** 
    * **class [ParticleSystem](../Classes/classshapeworks_1_1ParticleSystem.md)** <br>A facade class managing interactions with a particle system. 
    * **class [ParticleSystemCommand](../Classes/classshapeworks_1_1ParticleSystemCommand.md)** 
    * **class [ParticleSystemEvaluation](../Classes/classshapeworks_1_1ParticleSystemEvaluation.md)** 
    * **class [Particles](../Classes/classshapeworks_1_1Particles.md)** <br>Representation of correspondence points for a shape including multiple domains. 
    * **class [PhysicalRegion](../Classes/classshapeworks_1_1PhysicalRegion.md)** <br>physical bounds of a 3d region of space 
    * **class [PickResult](../Classes/classshapeworks_1_1PickResult.md)** 
    * **class [PlaneConstraint](../Classes/classshapeworks_1_1PlaneConstraint.md)** 
    * **class [PlaneWidget](../Classes/classshapeworks_1_1PlaneWidget.md)** <br>[PlaneWidget](). 
    * **class [PowerOfTwoPointTree](../Classes/classshapeworks_1_1PowerOfTwoPointTree.md)** 
    * **class [PowerOfTwoPointTreeNode](../Classes/classshapeworks_1_1PowerOfTwoPointTreeNode.md)** 
    * **class [PreferencesWindow](../Classes/classshapeworks_1_1PreferencesWindow.md)** <br>Qt UI dialog to control preferences. 
    * **class [ProcrustesRegistration](../Classes/classshapeworks_1_1ProcrustesRegistration.md)** 
    * **class [Project](../Classes/classshapeworks_1_1Project.md)** <br>Representation of a project. 
    * **class [ProjectCommandGroup](../Classes/classshapeworks_1_1ProjectCommandGroup.md)** 
    * **class [ProjectReader](../Classes/classshapeworks_1_1ProjectReader.md)** <br>Base class for [Project](../Classes/classshapeworks_1_1Project.md) readers. 
    * **class [ProjectUtils](../Classes/classshapeworks_1_1ProjectUtils.md)** 
    * **class [PythonWorker](../Classes/classshapeworks_1_1PythonWorker.md)** 
    * **class [QMeshWarper](../Classes/classshapeworks_1_1QMeshWarper.md)** <br>Wraps [MeshWarper](../Classes/classshapeworks_1_1MeshWarper.md) as a QObject. 
    * **class [QOptimize](../Classes/classshapeworks_1_1QOptimize.md)** <br>Wraps [Optimize](../Classes/classshapeworks_1_1Optimize.md) as a QObject. 
    * **class [ReconstructSurface](../Classes/classshapeworks_1_1ReconstructSurface.md)** 
    * **struct [Reconstruction](../Classes/structshapeworks_1_1Reconstruction.md)** 
    * **class [Sampler](../Classes/classshapeworks_1_1Sampler.md)** 
        * **struct [CuttingPlaneType](../Classes/structshapeworks_1_1Sampler_1_1CuttingPlaneType.md)** 
        * **struct [SphereType](../Classes/structshapeworks_1_1Sampler_1_1SphereType.md)** 
    * **class [SamplingFunction](../Classes/classshapeworks_1_1SamplingFunction.md)** <br>This function returns an estimate of the gradient of the entropy of a particle distribution with respect to change in position of a specific particle in that distribution. 
    * **class [Session](../Classes/classshapeworks_1_1Session.md)** <br>Representation of a session. 
    * **class [Shape](../Classes/classshapeworks_1_1Shape.md)** <br>Representation of a single shape/patient/subject. 
        * **class [Point](../Classes/classshapeworks_1_1Shape_1_1Point.md)** <br>TODO: replace this wherever it is used. 
    * **class [ShapeEvaluation](../Classes/classshapeworks_1_1ShapeEvaluation.md)** 
    * **class [ShapeEvaluationJob](../Classes/classshapeworks_1_1ShapeEvaluationJob.md)** <br>The [ShapeEvaluationJob]() class is a worker class that computes shape evaluation metrics of compactness, specificity, and generalization. It runs asynchronously using the [Job](../Classes/classshapeworks_1_1Job.md) and [Worker]() interfaces. 
    * **class [ShapeGradientMatrix](../Classes/classshapeworks_1_1ShapeGradientMatrix.md)** <br>Each column describes a shape. A shape may be composed of m_DomainsPerShape domains (default 1). ALL DOMAINS ARE _NOT_ ASSUMED TO HAVE THE SAME NUMBER OF PARTICLES! 
    * **class [ShapeMatrix](../Classes/classshapeworks_1_1ShapeMatrix.md)** <br>Each column describes a shape. A shape may be composed of m_DomainsPerShape domains (default 1). ALL DOMAINS ARE _NOT_ ASSUMED TO HAVE THE SAME NUMBER OF PARTICLES! 
    * **class [ShapeScalarJob](../Classes/classshapeworks_1_1ShapeScalarJob.md)** 
    * **class [ShapeScalarPanel](../Classes/classshapeworks_1_1ShapeScalarPanel.md)** 
    * **class [ShapeWorksStudioApp](../Classes/classshapeworks_1_1ShapeWorksStudioApp.md)** <br>Main ShapeWorksStudio window. 
    * **class [ShapeWorksUtils](../Classes/classshapeworks_1_1ShapeWorksUtils.md)** 
    * **class [ShapeworksCommand](../Classes/classshapeworks_1_1ShapeworksCommand.md)** 
    * **class [ShapeworksWorker](../Classes/classshapeworks_1_1ShapeworksWorker.md)** 
    * **struct [SharedCommandData](../Classes/structshapeworks_1_1SharedCommandData.md)** 
    * **class [SliceView](../Classes/classshapeworks_1_1SliceView.md)** <br>[SliceView](). 
    * **class [SplashScreen](../Classes/classshapeworks_1_1SplashScreen.md)** 
    * **class [StatsGroupLDAJob](../Classes/classshapeworks_1_1StatsGroupLDAJob.md)** 
    * **class [StatusBarWidget](../Classes/classshapeworks_1_1StatusBarWidget.md)** <br>[StatusBarWidget](). 
    * **class [StringUtils](../Classes/classshapeworks_1_1StringUtils.md)** <br>String utility functions. 
    * **class [StudioHandleWidget](../Classes/classshapeworks_1_1StudioHandleWidget.md)** 
    * **class [StudioInteractorStyle](../Classes/classshapeworks_1_1StudioInteractorStyle.md)** 
    * **class [StudioMesh](../Classes/classshapeworks_1_1StudioMesh.md)** <br>Representation of a single mesh. 
    * **class [StudioSliceInteractorStyle](../Classes/classshapeworks_1_1StudioSliceInteractorStyle.md)** 
    * **class [StudioUtils](../Classes/classshapeworks_1_1StudioUtils.md)** <br>Utilities for Studio. 
    * **class [StudioVtkOutputWindow](../Classes/classshapeworks_1_1StudioVtkOutputWindow.md)** <br>Implementation of vtkOutputWindow to capture and display VTK error messages. 
    * **class [Style](../Classes/classshapeworks_1_1Style.md)** 
    * **class [Subject](../Classes/classshapeworks_1_1Subject.md)** <br>Representation of a single subject. 
    * **class [Telemetry](../Classes/classshapeworks_1_1Telemetry.md)** 
    * **class [UpdateChecker](../Classes/classshapeworks_1_1UpdateChecker.md)** <br>Update Checker. 
    * **class [Variant](../Classes/classshapeworks_1_1Variant.md)** <br>[Variant]() class to represent multiple types. 
    * **class [VectorFunction](../Classes/classshapeworks_1_1VectorFunction.md)** 
    * **class [VectorImage](../Classes/classshapeworks_1_1VectorImage.md)** <br>Gradient (vector) image. 
    * **class [Viewer](../Classes/classshapeworks_1_1Viewer.md)** <br>3D [Viewer]()
    * **class [Visualizer](../Classes/classshapeworks_1_1Visualizer.md)** <br>Controls display of objects in viewers. 
    * **class [WheelEventForwarder](../Classes/classshapeworks_1_1WheelEventForwarder.md)** 
    * **class [Worker](../Classes/classshapeworks_1_1Worker.md)** 
    * **namespace [mesh](../Namespaces/namespaceshapeworks_1_1mesh.md)** 
    * **namespace [particles](../Namespaces/namespaceshapeworks_1_1particles.md)** 
    * **struct [powstruct](../Classes/structshapeworks_1_1powstruct.md)** 
    * **struct [powstruct< a, 0 >](../Classes/structshapeworks_1_1powstruct_3_01a_00_010_01_4.md)** 
    * **namespace [project](../Namespaces/namespaceshapeworks_1_1project.md)** 
        * **namespace [prefixes](../Namespaces/namespaceshapeworks_1_1project_1_1prefixes.md)** 
        * **namespace [types](../Namespaces/namespaceshapeworks_1_1project_1_1types.md)** 
    * **class [shapeworks_exception](../Classes/classshapeworks_1_1shapeworks__exception.md)** 
* **namespace [std](../Namespaces/namespacestd.md)** 
* **namespace [utils](../Namespaces/namespaceutils.md)** 
* **class [vec2d](../Classes/classvec2d.md)** 
* **class [vec3d](../Classes/classvec3d.md)** 
* **class [vec6d](../Classes/classvec6d.md)** 
* **class [vtkPolyDataToImageData](../Classes/classvtkPolyDataToImageData.md)** 



-------------------------------

Updated on 2024-05-15 at 19:51:22 +0000
